<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation = "vertical"
  android:background = "@drawable/tetris"
  >
  
   <RelativeLayout
 android:layout_width = "fill_parent"
 android:layout_height = "wrap_content"
  android:layout_marginTop = "50dp"
 >  
 <Button 
  android:id = "@+id/bt_continue"
  android:layout_width = "wrap_content"
  android:layout_height = "wrap_content" 
  android:text = "@string/continuePreviousGame"
  android:layout_centerHorizontal= "true"
  />
  </RelativeLayout>
  
   <RelativeLayout
 android:layout_width = "fill_parent"
 android:layout_height = "wrap_content"
 >  
   <Button 
  android:id = "@+id/bt_new"
  android:layout_width = "wrap_content"
  android:layout_height = "wrap_content" 
  android:text = "@string/newGame"
  android:layout_centerHorizontal= "true"
  />
  </RelativeLayout>
  
  <RelativeLayout
 android:layout_width = "fill_parent"
 android:layout_height = "wrap_content"
 >  
  <Button
  android:id = "@+id/bt_help"
  android:layout_width = "wrap_content"
  android:layout_height = "wrap_content"
  android:text = "@string/help"
 android:layout_centerHorizontal= "true"
  />
 </RelativeLayout>
  
  <RelativeLayout
 android:layout_width = "fill_parent"
 android:layout_height = "wrap_content"
 >  
 
  <Button
   android:id = "@+id/bt_rank"
  android:layout_width = "wrap_content"
  android:layout_height = "wrap_content"
  android:text = "@string/rank"
  android:layout_centerHorizontal= "true"
  />
 </RelativeLayout>
  
 <RelativeLayout
 android:layout_width = "fill_parent"
 android:layout_height = "wrap_content"
 >  
  <TextView
   android:id = "@+id/tv_level"
  android:layout_width = "wrap_content"
  android:layout_height = "wrap_content"
  android:text = "@string/level"
  android:textColor = "#ee000000"
  android:layout_centerHorizontal= "true"
  />
  </RelativeLayout>
 
 
 
  <RelativeLayout
 android:layout_width = "fill_parent"
 android:layout_height = "wrap_content"
 >  
  <TextView
  android:id = "@+id/tv_speed"
  android:layout_width = "wrap_content"
  android:layout_height = "wrap_content"
  android:layout_centerHorizontal = "true"
  android:text = "@string/speed"
  android:textSize = "20sp"
  android:textColor = "#ffffff00"
  android:background = "#6600ee00"
  />
  
  <Button
  android:id = "@+id/bt_pre"
  android:layout_width = "50dp"
  android:layout_height = "wrap_content"
  android:layout_toLeftOf = "@id/tv_speed"
  android:text = "&lt;&lt;"
  android:textSize = "20sp"
  android:background = "#70dfdfdf"
  android:textColorHighlight = "#ffff0000"
  android:layout_marginRight = "10dp"
  />
  
  <Button
  android:id = "@+id/bt_next"
  android:layout_width = "50dp"
  android:layout_height = "wrap_content"
  android:layout_toRightOf = "@id/tv_speed"
  android:text = ">>"
  android:textSize = "20sp"
  android:background = "#80cfcfcf"
   android:layout_marginLeft = "10dp"
  />
  
</RelativeLayout>

<RelativeLayout
 android:layout_width = "fill_parent"
 android:layout_height = "wrap_content"
 android:layout_marginTop = "15dp"
 >  
 <CheckBox
  android:id = "@+id/cb_voice"
  android:layout_width = "wrap_content"
  android:layout_height = "wrap_content"
  android:checked = "true"
  android:layout_centerHorizontal = "true"
  />
  <TextView
   android:id = "@+id/tv_voice"
  android:layout_width = "wrap_content"
  android:layout_height = "wrap_content"
  android:text = "@string/voice"
  android:textColor = "#ee000000"
  android:layout_toLeftOf = "@id/cb_voice"
  />
  </RelativeLayout>
  
  <RelativeLayout
 android:layout_width = "fill_parent"
 android:layout_height = "wrap_content"
 android:layout_marginTop = "15dp"
 > 
 <Button 
  android:id = "@+id/bt_exit"
  android:layout_width = "wrap_content"
  android:layout_height = "wrap_content" 
  android:text = "@string/exit"
  android:layout_centerHorizontal= "true"
  />
 </RelativeLayout> 

</LinearLayout>
